правки и добавления